@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 01:36:05 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 01:39:17 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -18,5 +18,11 @@
   <description>樂隊熱潮席捲韓國音樂界韓國音樂榜單最近被樂隊統治尤其是JYP娛樂的流行搖滾樂隊DAY6韓語데이식스截至上週五DAY6的四首舊曲和新曲均躋身Melon音樂榜單前十名其中Happy和WelcometotheShow分別占據第一和第三名MeltDown和TimeofOurLife分別排名第四和第六DAY6並非新晉樂隊但自2015年出道以來九年過去現...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 01:36:05 +0800</pubDate>
+</item><item>
+  <title>BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？</title>
+  <link>https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？.html</link>
+  <description>BLACKPINK成員Jennie即將推出新單曲Mantra能否打破近期女Solo歌手的低迷走勢BLACKPINK成員Jennie即將於10月11日推出她的新單曲Mantra這是她自一年前推出YouMe以來的首次發行近期許多女KpopSolo歌手的表現不佳令人懷疑像Jennie這樣成功的偶像是否能夠打破目前的低迷走勢最近幾位女KpopSolo歌手如ChunghaSomi和Sunmi無法在國內和國際市場複製過往的榜單成功以下是她們近...</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 01:39:17 +0800</pubDate>
 </item></channel>
 </rss>
