@@ -1,0 +1,263 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "BLACKPINK\u6210\u54e1Jennie\u65b0\u55ae\u66f2\u300aMantra\u300b\u80fd\u5426\u626d\u8f49K-pop Solo\u6b4c\u624b\u4f4e\u8ff7\u8d70\u52e2\uff1f", "description": "BLACKPINK\u6210\u54e1Jennie\u65b0\u55ae\u66f2\u300aMantra\u300b\u80fd\u5426\u626d\u8f49K-pop Solo\u6b4c\u624b\u4f4e\u8ff7\u8d70\u52e2\uff1f", "url": "https://www.famechos.me/news/BLACKPINK\u6210\u54e1Jennie\u65b0\u55ae\u66f2\u300aMantra\u300b\u80fd\u5426\u626d\u8f49K-pop Solo\u6b4c\u624b\u4f4e\u8ff7\u8d70\u52e2\uff1f.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T01:39:08.309952+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？.html"/>
+<meta name="description" content="BLACKPINK成員Jennie最新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？ Solo歌手的市場表現是否能夠逆轉？ Jennie的新作引發樂迷熱議。">
+
+<meta name="keywords" content="BLACKPINK,Jennie,Mantra,K-pop,Solo歌手,新單曲,音樂市場,走勢,樂迷,熱議">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？.html" />
+        <meta property="og:title" content="BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？" />
+        <meta property="og:description" content="BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？" />
+        <meta property="twitter:description" content="BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>BLACKPINK成員Jennie即將於10月11日推出她的新單曲《Mantra》，這是她自一年前推出《You & Me》以來的首次發行。近期，許多女K-pop Solo歌手的表現不佳，令人懷疑像Jennie這樣成功的偶像是否能夠打破目前的低迷走勢。</p>
+<p>最近，幾位女K-pop Solo歌手，如Chungha、Somi和Sunmi，無法在國內和國際市場複製過往的榜單成功。以下是她們近期作品的表現：</p>
+<ul>
+<li>Chungha：3月份發行的《Eenie Meenie》登上了Gaon音樂榜第56位，但8月份發行的《Algorithm》卻未能在全球範圍內產生影響。</li>
+<li>Somi：《Fast Forward》在2023年8月登上了告示牌世界數位歌曲銷售榜第10位，但一年後發行的《Ice Cream》卻沒有像她之前的作品那樣表現強勁。</li>
+<li>Sunmi：最新單曲《Balloon in Love》未能登上榜單的頂端，這與她之前的歌曲《Gashina》和《Pporappippam》的成功形成鮮明對比。</li>
+</ul>
+<p>然而，Jennie可能會打破這種趨勢，因為BLACKPINK的巨大人氣和她與哥倫比亞唱片公司的新合作夥伴關係。專家表示，BLACKPINK做的任何事情都會成為轟動一時的事件，他們的成功是有保證的。</p>
+<p>另一位BLACKPINK成員Lisa的成績已經證實了這一點，她的單曲《Rockstar》在6月份登上了告示牌百大熱門榜第70位和告示牌全球二百大單曲榜第4位。</p>
+<p>Jennie憑藉她的全球聲譽和與BLACKPINK的關係，已經取得了顯著的Solo成功。她的2019年首張Solo單曲《Solo》迅速登上了國內榜單榜首，並在音樂節目中贏得了獎項，而在國際上，它鞏固了她的明星地位。《You & Me》進一步提升了她的全球吸引力，打入了英國單曲排行榜前40名，並在告示牌全球二百大單曲榜上排名靠前。</p>
+<p>音樂評論家Lim Hee-yun強調，近期K-pop Solo歌手的低迷主要影響到那些不屬於流行團體或過去人氣巔峰已過的歌手。</p><p>對於Solo歌手來說，除非他們曾經是成功團體的一員，並能夠利用該品牌的力量，否則他們的成功往往是有限的。大型經紀公司已經為團體建立了強大的粉絲建設系統，使得Solo歌手很難在這些網絡之外茁壯成長。</p>
+<p>Jennie也可能從她與哥倫比亞唱片公司的合作夥伴關係以及她在家庭票房系列《偶像漩渦》中的出演中受益。她的美國認可度遠遠超過許多其他K-pop偶像。</p>
+<p>去年，Jennie除了出演《偶像漩渦》外，她還與威肯和莉莉-蘿絲·戴普等著名流行歌手合作。這些合作在告示牌榜單上取得了成功，登上了告示牌熱門R&B歌曲榜第14位和告示牌百大熱門榜第51位。</p>
+<p>此外，作為香奈兒的代言人，Jennie在美國的知名度遠遠超過了一般的K-pop偶像。與哥倫比亞唱片公司合作，並在流行的美國脫口秀和其他主流平台上宣傳她的音樂，可能會取得顯著的成功。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/3Al7gPBuiAk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html">KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩.html">韓國樂隊熱潮來襲！DAY6和QWER等樂隊席捲音樂榜單，獨立樂隊也大放異彩</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
