@@ -26,4 +26,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/BLACKPINK成員Jennie新單曲《Mantra》能否扭轉K-pop Solo歌手低迷走勢？.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T01:39:17+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
