@@ -1,3 +1,4 @@
 
 https://www.koreaherald.com/view.php?ud=20241011050558
 https://tokyocheapo.com/entertainment/event-posts/the-biggest-autumn-fireworks-festival-returns-to-tokyo-this-week/
+https://www.koreaherald.com/view.php?ud=20241003050216
